--- a/styles.css
+++ b/styles.css
@@ -174,7 +174,7 @@ td {
 }
 
 thead th {
-  background: rgba(0, 0, 0, 0.03);
+  background: rgb(0, 0, 0);
 }
 
 /* Sortable headers: clearer hover */
