Colour of button

--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ footer {
   padding: 10px 20px;
   margin: 1rem 12rem;
   font-size: 16px;
-  color: #fff;
+  color: #000;
   background-color: #2a2a2e;
   border: none;
   border-radius: 5px;
